2001-11-23  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-alpha.c (tc_gen_reloc): Remove SEC_MERGE test.
	* write.c (adjust_reloc_syms): Don't handle relocs against
	SEC_MERGE section symbols specially.
	(fixup_segment): Likewise.

2001-11-21  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (mips_need_elf_addend_fixup): New, extracted from...
	(md_apply_fix3): ...here.  Don't prevent the symbol value being
	subtracted twice from GPREL addends.
	(tc_gen_reloc): Add the symbol value to a GPREL addend if it was
	subtracted by the previous function.

2001-11-20  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-avr.c (md_apply_fix3): Fix typo introduced by
	md_apply_fix3 change.

2001-11-20  Ben Elliston  <bje@redhat.com>

	* config/tc-m88k.c (md_apply_fix3): Match local variable `val' to
	 usage after md_apply_fix3 cleanups.

2001-11-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* doc/c-mmix.texi: Use texinfo 4 features.
	(MMIX-mmixal): Fix typo.

2001-11-17  Hans-Peter Nilsson  <hp@axis.com>

	* config/tc-cris.c (md_apply_fix3): Cast value, not pointer, in
	val assignment.

2001-11-16  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-m68k.c (md_apply_fix3): Change val back to a signed type.

2001-11-15  H.J. Lu  <hjl@gnu.org>

	* config/tc-hppa.c (md_apply_fix3): Fix a typo.

2001-11-15  H.J. Lu  <hjl@gnu.org>

	* config/tc-alpha.c (md_apply_fix3): Fix a typo.

2001-11-15  Nick Clifton  <nickc@cambridge.redhat.com>

	* write.c (fixup_segment): Remove references to md_apply_fix and
	TC_HANDLE_FX_DONE.
	* cgen.c, config/obj-coff.c, config/tc-*.c: Update all occurances
	of md_apply_fix to md_apply_fix3.
	Make all md_apply_fix3 functions void.
	* cgen.h, config/obj-coff.h, tc-*.h: Remove all definitions of
	MD_APPLY_FIX3 and TC_HANDLE_FX_DONE.
	* doc/internals.texi: Update references to md_apply_fix3.
	* tc.h: Update prototype for md_apply_fix3.

2001-11-15  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.h (md_end): Define.